# git2know

./: .gitignore  .mise.toml  LICENSE  README.md  git2know  pyproject.toml  requirements-dev.txt  requirements.txt
.mise/tasks/: install
.mise/tasks/pip/: upgrade
git2know/: __init__.py  config.toml  index.py  main.py  repository.py
git2know/classes/: repository.py
src/: main.py
src/classes/: repository.py
